@@ -1,18 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX dracut-9999-multipath-udev-rules.patch 847 RMD160 48dae7a25a4e05c3234a5e02e6980bbd40eec04a SHA1 5c2e00a12c8bee0f855bcf6120f848e2be7772c9 SHA256 5e3a5613f44d0eb57e0b5c11e02197fb3b366b6cc1bb87435355eba884e33f4c
-EBUILD dracut-9999.ebuild 7184 RMD160 14026674b4b82af2a661bf32d92eba16523ac36f SHA1 3c60ac1498ec1023adde9c9ad8d34ff564ef5200 SHA256 05627d7dd981e04bc7f0c0cbdb546fc802ecded88cfd7a7de5daf7c76010fae3
-MISC ChangeLog 6371 RMD160 3b5e42c370b8e6cd7cb635e3743b15b862546b31 SHA1 6710dcf6d9bf217c7f4a121ca1434cd3fb8187d5 SHA256 154e1820bab613daa90765fcbb7680f5e0dfcc76d9e03d7e4d1bd7534b203203
-MISC metadata.xml 780 RMD160 469db92ed19d7fe7adeb606b7095ad4ad9ca51e1 SHA1 1c85da433a13323e257ccdc6ed27d623149ad2b7 SHA256 ec8bfdca230f0f9f4b33b7e08c9f3978ac812396f4e6b07c1e96e3320e9d03fd
+AUX dracut-9999-multipath-udev-rules.patch 847 SHA256 5e3a5613f44d0eb57e0b5c11e02197fb3b366b6cc1bb87435355eba884e33f4c SHA512 8f054463221a2f4000b25a272b2a9e9d4a9269b96862ad4a308d26dd8ec05cc252e017716c7425807051b5d2f6631bc22ebc0865c7d19ff86fb4307852017320 WHIRLPOOL 518b5e37e22b62f6cc83653f8876ba2daa272725416ab0b8a97695fdc84b26fda284d703b88790785126b496b12d2cb7d94e2dfcb5203ef1a7cb825f1f2036d7
+EBUILD dracut-9999.ebuild 6487 SHA256 5624a122992e54d90fda4beac3e7b01e1a4070652bafa2d591c9d45afe4ec6a0 SHA512 a94445128f77e0120c373480f7be15425a0122ce9ead44e143eb7d841757e0cffc2c90972021c9c56f0dbc2162139a41843ca89e61953d2aa10cc435ca4317f6 WHIRLPOOL 25dffd7df3649a402faca8c7fc0fa6c88332e5d2646a5d9984d969252b2d79216e604607645c7f60f39075b0859504b48b36abd4818918f57b47e97b2b5ee112
+MISC ChangeLog 6510 SHA256 b7662f122a6c24820b478acc85abf9756af2752d299af3484c3094605e799529 SHA512 7d53279e3e46cebbb79714c79acc5b6164fdac12ad66c3cf74bb5e640e2a227e40df78bb93890d8d606c74d933455636e4102137232be642f37817c1790d1ad3 WHIRLPOOL cd796418e53a422578d9d507c711b9c43ffdd28b484ea1a5e670fa71d159eb12223b0a1dfaf470b3fb52d19bd73246f0719100a178c22f6208012579c135c4eb
+MISC metadata.xml 926 SHA256 b895115d72a686208816e1042bd295abb183ea832cdda73859deb690c11b932c SHA512 e6695bc301c6b3621e1730bc8e6ecc6c317705037a3004aab36bfea0b7f6a8b235a6d61ec4e4b9bb234ea53971d6c18dfbd0d09b3f30080a07eeb9e57da98c96 WHIRLPOOL d844828523e7bb0805b4b3d64d72163702adb6d4bedf7929494208e50696e43ddddc1e4a262c663ec98e05b65037868454135c0a46f82fb6b455e692826b48dc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJP1KG6AAoJEPATRTHh2/q1ZHwH/1bTkZHC+SM++zRBwuS+WCPt
-iBwEmx3m5Gqy5bInYNmffH9NfzGdJNxC9L7bYniqpg1l5YG3gWOxT2OKZEGXdoKM
-Px0ZYkDPoY85BUvXv4etwQS1XNp6XRLjHJ/rZv8OVJn3v4seey+YHKr9KABiF/R2
-j3b4ki6FBsWTN5OLOftpwJPaqfmfwYGROYsvOgGt0GSk8z1nZ42BQlbcuA7XNV9x
-9bmK/0W5hcqdrLLqSEfey4RJqjfSWzEQ3hkHYBScIRYlctBJfHyldq8c2PTD8+4o
-C3UJGOx/0aEs3dnaqZ05MFLpBtGugJl8il38MooV2vPCyGql5Bsi3AqCkqdtLZ8=
-=cd8t
+iQEcBAEBCAAGBQJQE5YFAAoJEPATRTHh2/q1M8sH/jAyLBWxKsOtsfpZFOAT6aU2
+Rjl85S8mNCxhM4SdOx6+rAlEZ2qqUvN7FRFhHPtHR1REknz1LPYHXFuH0G6T6ot0
+FX7dxVmQfBRhWgnxg87gTwl5DC+ggROSBJHh31MX/osn//FN5qRJEjZ7xucKUGbE
+ertQNVEGNIt/Y4m6AJ1UoJQuH7mcBEm13E923z7ARZuZS4Hxc9jU9lsOI9ZRiMcM
+BjDFbovCOOshBvO2Hf6vhnWO046Sfve2cNLLQjKGLRl18w9lPjAwRlPjs4mDRmFI
+YF3+m/42SvtcajwB/3ymsTnV+opxtSHMJee1r4i8xVRVFOqbD9ObVRbMfCQaF5Q=
+=hBh9
 -----END PGP SIGNATURE-----
